--- a/index.html
+++ b/index.html
@@ -37,7 +37,35 @@
             <h2>Interview Script</h2>
             <p>Here’s the script I prepared for my interview project:</p>
             <textarea id="script-text" readonly>
-This is where your interview script content will go. Replace this text with your actual script.
+What would you say is your greatest aviation-related achievement?
+                
+                Crossing the U.S. twice in a single-engine aircraft from West to East is my top achievement. The live improvisation required every hour, especially due to changing weather conditions, made the journey incredibly rewarding. On one trip, I adjusted my route southward after crossing the Rockies, anticipating that the northern path would become challenging in two days. It was a continuous exercise in time-sensitive problem-solving, which I loved.
+                The first crossing was in a Citabria 7GCAA, without autopilot, while the second was in an XCub equipped with autopilot. The difference in workload was striking. On the second trip, I barely felt tired at the end of the day.
+         
+What role has aviation taken in your life?
+
+                Aviation is central to my life. I work on a flight simulator, so there isn’t a day that goes by without thinking about aviation and related topics.
+
+How has the English language impacted your life and career?
+
+                English has been foundational to everything I’ve done. It enabled me to learn coding, flying, secure an internship in the U.S., and eventually stay there. Most significantly, it was crucial for flying in the U.S. When I moved there, I earned my pilot’s license before even getting a California driver’s license. The biggest challenge during my checkout was understanding the fast-paced air traffic controllers in California.
+
+If you could make one change to the aviation/transport industry, what would it be?
+
+                I’d push for more automation. Humans are fallible, and we should reduce reliance on intensive training to prevent accidents.
+
+Who are some people you aspire to and why?
+
+                Elon Musk used to be one, though he’s become the worst version of himself. I admired his ability to identify flaws in systems and streamline them in ways others rarely considered.
+                Beyond him, I deeply respect entrepreneurs. Turning an idea into a successful product or service requires incredible resilience, and I admire that journey.
+
+How did you get into aviation?
+
+                Flight simulation was my entry point. Flying virtually every day made my actual training much faster and more intuitive.
+
+What's your favorite plane? Why?
+
+                My favorite is the XCub, which I own. It’s a fast, powerful, and fun aircraft that never fails to leave me smiling after every landing.
             </textarea>
             <button id="toggle-script">Click here to see the script :)</button>
         </section>
