--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         </p>
     </div>
 </section>
-
+        <img src="PS1.jpg" alt="Personal Story" class="photo">
+        <img src="PS2.jpg" alt="Personal Story" class="photo">
 
         
     </main>
