--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="about-section">
             <h2>About This Site</h2>
-            <p>Hey, welcome to my website! This is where I will be posting most, if not all, of my assignments this year. For now, you can find my picture for the photo competition, and my interview script. This page will be updated regularly as the year goes by, so feel free to tune in every once in a while to find some new stuff! This page was last updated on the cold, rainy evening of Tuesday, November 26.</p>
+            <p>Hey, welcome to my website! This is where I will be posting most, if not all, of my assignments this year. For now, you can find my picture for the photo competition, and my interview script. This page will be updated regularly as the year goes by, so feel free to tune in every once in a while to find some new stuff! This page was last updated on the cold, dark evening of Wednesday, December 11.</p>
         </section>
         <section id="photo-section">
             <h2>Photo Competition</h2>
