--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
     <main>
         <section id="about-section">
             <h2>About This Site</h2>
-            <p>Hey, welcome to my website! This is where I will be posting most, if not all, of my assignments this year. For now, you can find my picture for the photo competition, and my interview script. This page will be updated regularly as the year goes by, so feel free to tune in every once in a while to find some new stuff! This page was last updated on the cold, dark evening of Wednesday, December 11.</p>
+            <p>Hey, welcome to my website! This is where I will be posting most, if not all, of my assignments this year. For now, you can find my picture for the photo competition, and my interview script. This page will be updated regularly as the year goes by, so feel free to tune in every once in a while to find some new stuff! This page was last updated on the cold, grey morning of Thursday, December 12.</p>
+        </section>
+        <section id="about-section">
+            <h2>Interesting Links</h2>
+            <p>Here are some links I find fun or interesting:</p>
+            <ul>
+                <li><a href="https://globe.adsbexchange.com">ADSB Exchange</a> - A flight tracker, like Flightradar24, but includes military and private planes as well.</li>
+                <li><a href="https://zoom.earth">Zoom Earth</a> - A website with a live satellite view of the world, like Google Earth but in real-time!</li>
+                <li><a href="https://wikimap.toolforge.org/">WikiMap</a> - A map of the world that links every Wikipedia article and Wikimedia photo with a location on the map.</li>
+                <li><a href="https://driveandlisten.herokuapp.com/">Drive and Listen</a> - A website that lets you "drive" around a city of your choice while listening to local radio.</li>
+            </ul>
         </section>
         <section id="photo-section">
             <h2>Photo Competition</h2>
