--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <nav>
         <ul>
             <li><a href="#about-section">About This Site</a></li>
+            <li><a href="#links-section">Interesting Links</a></li>
             <li><a href="#photo-section">Photo Competition</a></li>
             <li><a href="#interview-section">Interview Script</a></li>
+            <li><a href="#story">Personal Story</a></li>
         </ul>
     </nav>
 
@@ -25,7 +27,7 @@
             <h2>About This Site</h2>
             <p>Hey, welcome to my website! This is where I will be posting most, if not all, of my assignments this year. For now, you can find my picture for the photo competition, and my interview script. This page will be updated regularly as the year goes by, so feel free to tune in every once in a while to find some new stuff! This page was last updated on the cold, grey morning of Thursday, December 12.</p>
         </section>
-        <section id="about-section">
+        <section id="links-section">
             <h2>Interesting Links</h2>
             <p>Here are some links I find fun or interesting:</p>
             <ul>
@@ -98,8 +100,10 @@
         </p>
     </div>
 </section>
-        <img src="PS1.jpg" alt="Personal Story" class="photo">
-        <img src="PS2.jpg" alt="Personal Story" class="photo">
+        <section id="story">
+            <img src="PS1.jpg" alt="Personal Story" class="photo">
+            <img src="PS2.jpg" alt="Personal Story" class="photo">
+        </section>
 
         
     </main>
