--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         <p><u>If you could make one change to the aviation/transport industry, what would it be?</u></p>
         <p>
             I’d push for more automation. Humans are fallible, and we should reduce reliance on intensive training to
-            prevent accidents.
+            prevent accidents and make aviation a safer industry.
         </p>
 
         <p><u>Who are some people you aspire to and why?</u></p>
         <p>
-            Elon Musk used to be one, though he’s become the worst version of himself. I admired his ability to identify
+            Elon Musk used to be one, though he’s become the worst version of himself in recent years... I admired his ability to identify
             flaws in systems and streamline them in ways others rarely considered. Beyond him, I deeply respect
             entrepreneurs. Turning an idea into a successful product or service requires incredible resilience, and I
             admire that journey.
@@ -89,13 +89,13 @@
 
         <p><u>How did you get into aviation?</u></p>
         <p>
-            Flight simulation was my entry point. Flying virtually every day made my actual training much faster and
+            Flight simulation was my entry point. Being able to fly anytime, anywhere made it much easier. Flying virtually every day made my actual training much faster and
             more intuitive.
         </p>
 
         <p><u>What's your favorite plane? Why?</u></p>
         <p>
-            My favorite is the XCub, which I own. It’s a fast, powerful, and fun aircraft that never fails to leave me
+            My favorite is the XCub, which I own. It's a fun little airplane. Fast, powerful, and handy aircraft that never fails to leave me
             smiling after every landing.
         </p>
     </div>
