--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <section id="interview-section">
     <h2>Interview Script</h2>
-    <p>Here’s the script I prepared for my interview project:</p>
+    <p>Here’s the transcript from the interview with Laura Laban, CEO of Infinite Flight and a local pilot.</p>
     <div id="script-container">
         <p><u>What would you say is your greatest aviation-related achievement?</u></p>
         <p>
